samples/_failures_safe/1761513494_3d7705_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0896811.c: In function ‘main’:
./samples/SAFE/__tmp_c0896811.c:137:20: error: missing terminating " character
  137 |             printf("\nMatrix Multiplication
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c0896811.c:137:13: error: expected expression at end of input
  137 |             printf("\nMatrix Multiplication
      |             ^~~~~~
./samples/SAFE/__tmp_c0896811.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c0896811.c:137:13: error: expected declaration or statement at end of input
